operador/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-op
  labels:
    app.kubernetes.io/part-of: rhbk-operator
